updated empty cart HTML, finished placing order from checkout page

--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -111,7 +111,7 @@ body {
   position: absolute;
   background-color: white;
   border: 1px solid black;
-  max-height: 600px;
+  max-height: 606px;
   top: 54px;
   right: 0;
   z-index: 2;
@@ -206,24 +206,29 @@ body {
   cursor: pointer;
 }
 
-.checkout span {
+.order-container button {
   padding: 15px 80px ;
   background-color:chartreuse;
   color: white;
   font-size: 16px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   cursor: pointer;
+  width: 300px;
+  border: none;
 }
 
 /* end of header section */
 
+
+// navigation bar
 .navbar-container {
-  position:sticky;
-  top: 0;
   z-index: 1;
   background-color: whitesmoke;
-  display: flex;
   margin-bottom: 20px;
+}
+
+.collapse {
+  visibility: hidden;
 }
 
 .menu-wrapper {
@@ -237,10 +242,9 @@ body {
 }
 
 .menu {
-  display: flex;
   color: black;
   font-family:Arial, Helvetica, sans-serif;
-  padding: 10px 15px;
+  padding: 15px 25px;
   transition: 0.2s;
 }
 
@@ -263,6 +267,7 @@ body {
   width: 100%;
   visibility: hidden;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  z-index: 1;
 }
 
 .dropdown-list li {
@@ -286,7 +291,38 @@ body {
   border: 20px solid white;
 }
 
+.progress-bar {
+  margin: 0;
+  list-style-type: none;
+}
 
+.progress-bar img {
+  max-width: 40px;
+  max-height: 40px;
+}
+
+.indicator {
+  position: relative;
+  top: 20px;
+  height: 5px;
+  width: 100px;
+}
+
+.done {
+  background-color: #3ada14;
+}
+
+.icon-done {
+  background-image: url("/images/clip-arts/green-checkmark.png");
+}
+
+
+
+
+
+//----------
+
+// slider
 .slider {
   display: flex;
   aspect-ratio: 16 / 9;
@@ -655,14 +691,6 @@ body {
   flex-direction: column;
 }
 
-.list-info span {
-  margin-top: 5px;
-  margin-bottom: 5px;
-  font-size: 20px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-weight: 500;
-}
-
 .list-images {
   max-width: 200px;
   max-height: 200px;
@@ -782,62 +810,15 @@ body {
   transform: translate(-50%, -50%) scale(1);
 }
 
-.popUp-wrapper {
-  display: flex;
-}
 
-.popUp-wrapper .img {
+.flex .addition-product {
 width: 300px;
 height: 300px;
-background-color: whitesmoke;
 }
+
 
 .information {
   margin-left: 15px;
-}
-
-
-.amount {
-  display: flex;
-  width: 100px;
-
-}
-
-.amount button {
-  height: 25px;
-  width: 25px;
-  background-color: black;
-  border: 1px solid black;
-  color: white;
-}
-
-.amount span {
-  background-color: white;
-  width: 50px;
-  color: black;
-  border: 1px solid black;
-  text-align: center;
-  padding: 2px;
-}
-
-.action button {
-  width: 100px;
-  height: 40px;
-  background-color: black;
-  color: white;
-  border: 1px solid black;
-  padding: 5px 15px ;
-}
-
-.price {
-  margin: 10px 0;
-}
-
-
-.price span {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-weight: 500;
-  font-size: 20px;
 }
 
 // rating
@@ -879,6 +860,13 @@ background-color: whitesmoke;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color:black;
   font-weight:600;
+}
+
+.hard {
+  font-size: 25px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: black;
+  font-weight: 700;
 }
 
 .buyerInformation {
@@ -1009,14 +997,22 @@ input {
  justify-content: space-between;
 }
 
+.flex-dir-col {
+  display: flex;
+  flex-direction: column;
+}
+
 .justify-center {
   display: flex;
   justify-content: center;
 }
 
+.text-center {
+  text-align: center;
+}
 
-.Teko-40-300 {
-  font-size: 40px;
+.Teko-12-300 {
+  font-size: 14px;
   font-family: 'Teko', sans-serif;
   font-weight: 300;
 }
@@ -1051,10 +1047,28 @@ input {
   font-weight: 400;
 }
 
+.Teko-40-300 {
+  font-size: 40px;
+  font-family: 'Teko', sans-serif;
+  font-weight: 300;
+}
+
 .Teko-60 {
   font-size: 60px;
   font-family: 'Teko', sans-serif;
   font-weight: 700;
+}
+
+.Segoe-UI-20 {
+  font-size: 20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 500;
+}
+
+.Segoe-UI-15 {
+  font-size: 15px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 500;
 }
 
 .marginY-10 {
@@ -1063,6 +1077,18 @@ input {
 
 .marginY-5 {
   margin: 5px 0;
+}
+
+.marginY-30 {
+  margin: 30px 0;
+}
+
+.marginX-30 {
+  margin: 0 30px;
+}
+
+.paddingX-30 {
+  padding: 0 30px;
 }
 
 .background-gainboros {
@@ -1153,7 +1179,7 @@ input {
   padding: 20px;
 }
 
-.flex button {
+.quanti-select .Teko-25-400 {
   width: 40px;
   height: 40px;
   padding: 0;
@@ -1163,23 +1189,23 @@ input {
   transition: 0.2s ease-in-out;
 }
 
-.flex button:hover {
+.quanti-select button:hover {
   background-color: gainsboro;
 }
 
-.flex .add-btn {
+.quanti-select .add-btn {
   border-radius: 0px 20px 20px 0px;
   border-left: 0px;
   border-right: 1px solid gainsboro;
 }
 
-.flex .subtract-btn {
+.quanti-select .subtract-btn {
   border-radius: 20px 0px 0px 20px;
   border-right: 0px;
   border-left: 1px solid gainsboro;
 }
 
-.flex input {
+.quanti-select input {
   max-width: 70px;
   height: 40px;
   text-align: center;
@@ -1187,11 +1213,34 @@ input {
   box-sizing: border-box;
 }
 
-
 .add-to-cart-btn button {
-  width: 200px;
-  height: 100%;
-  border-radius: 20px;
-  border: 1px solid #0082ca;
-  cursor: pointer;
+  width: 150px;
+ border-radius: 20px;
+ border: 1px solid black;
 }
+
+//Check Out Page
+.checkmark {
+  max-width: 100px;
+  max-height: 100px;
+}
+
+//Empty Cart partial hbs
+.baggy {
+  max-width: 500px;
+  max-height: 500px;
+  background-color: whitesmoke;
+  border-radius: 300px;
+}
+
+.return-shopping {
+  padding: 10px 30px;
+  border: 1px solid black;
+  transition: 0.2s;
+}
+
+.return-shopping:hover {
+  background-color: black;
+  color: white;
+}
+
