--- a/src/resources/views/partials/navigation.hbs
+++ b/src/resources/views/partials/navigation.hbs
@@ -1,36 +1,39 @@
-<section class="navbar-container">
-  <a href="/" class="route-link">
-    <div class="menu-wrapper">
-      <div class="menu">
-        <img class="menu-icon icn1" src="/images/clip-arts/house-icon.png" />
-        <span>HOME</span>
+<section class="flex-spacebtwn  navbar-container">
+  <div class="flex">
+    <a href="/" class="route-link">
+      <div class="menu-wrapper">
+        <div class="flex menu">
+          <img class="menu-icon icn1" src="/images/clip-arts/house-icon.png" />
+          <span>HOME</span>
+        </div>
       </div>
-    </div>
-  </a>
-  <div class="menu-wrapper" id="dropdown">
-    <div class="menu">
-      <img class="menu-icon icn2" src="/images/clip-arts/list-icon.png" />
-      <span>DANH MỤC SẢN PHẨM</span>
-    </div>
-    <ul class="dropdown-list">
-      <a href="/equipment" class="route-link">
-        <li>Dụng cụ tập luyện</li>
-      </a>
-
-      <a href="/supplement" class="route-link">
-        <li>Thực phẩm thể hình</li>
-      </a>
-
-      <li>Quần áo</li>
-
-    </ul>
-  </div>
-  <div class="menu-wrapper">
-    <a href="/contact" class="route-link">
-    <div class="menu">
-      <img class="menu-icon icn3" src="/images/clip-arts/mail-icon.png" />
-      <span>LIÊN HỆ</span>
-    </div>
     </a>
+    <div class="menu-wrapper" id="dropdown">
+      <div class="flex menu">
+        <img class="menu-icon icn2" src="/images/clip-arts/list-icon.png" />
+        <span>DANH MỤC SẢN PHẨM</span>
+      </div>
+      <ul class="dropdown-list">
+        <a href="/equipment" class="route-link">
+          <li>Dụng cụ tập luyện</li>
+        </a>
+
+        <a href="/supplement" class="route-link">
+          <li>Thực phẩm thể hình</li>
+        </a>
+
+        {{!-- <li>Quần áo</li> --}}
+
+      </ul>
+    </div>
+    <div class="menu-wrapper">
+      <a href="/contact" class="route-link">
+        <div class="flex menu">
+          <img class="menu-icon icn3" src="/images/clip-arts/mail-icon.png" />
+          <span>LIÊN HỆ</span>
+        </div>
+      </a>
+    </div>
   </div>
+
 </section>
