update order function

--- a/src/resources/views/cart.hbs
+++ b/src/resources/views/cart.hbs
@@ -15,8 +15,6 @@
 
             <span class="soft">Giờ đây bạn có thể theo dõi tiến trình đơn hàng của mình trên thanh điều hướng.</span>
 
-
-
         </div>
     </div>
 </div>
@@ -53,12 +51,9 @@
         </div>
 
         <div class="columnContainer">
-            <div class="checkbox-section">
-                <input class="checkbox" type="checkbox">
-                <span class="checkboxName">GIAO HÀNG ĐẾN ĐỊA CHỈ KHÁC</span>
-            </div>
-        </div>
+            <span class="soft">Ghi chú</span>
         <input placeholder="Ghi chú đơn hàng (tùy chọn)" type="text" name="noteFromCustomer">
+        </div>
 
         <div class="columnContainer">
             <button typpe="submit" onclick=openPop()>
