--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -10,7 +10,7 @@
   </a>
 
   {{!-- Order progress bar --}}
-  <ul class="flex progress-bar marginY-10">
+  <ul class="flex marginY-10 hide progress-bar">
 
     <li class="marginY-10 flex-dir-col">
       <div class="justify-center">
